Update how it works section

--- a/index.html
+++ b/index.html
@@ -460,18 +460,18 @@ html{scroll-behavior:auto}
     <div class="steps-grid">
       <div class="step">
         <div class="step-num">01</div>
-        <h3 class="step-title">Every message stored</h3>
-        <p class="step-desc">Raw messages saved with cryptographic hashes. Nothing is deleted or truncated.</p>
+        <h3 class="step-title">Add your API key</h3>
+        <p class="step-desc">Connect OpenAI, Anthropic, or Google. Pay providers directly at their rates.</p>
       </div>
       <div class="step">
         <div class="step-num">02</div>
-        <h3 class="step-title">Semantic indexing</h3>
-        <p class="step-desc">Vector embeddings enable search by meaning, not just keywords.</p>
+        <h3 class="step-title">Chat like normal</h3>
+        <p class="step-desc">Use AI the way you always do. Upload documents, write code, share files.</p>
       </div>
       <div class="step">
         <div class="step-num">03</div>
-        <h3 class="step-title">Automatic summaries</h3>
-        <p class="step-desc">Daily and weekly summaries compress context while preserving key details.</p>
+        <h3 class="step-title">Everything saved forever</h3>
+        <p class="step-desc">All history, documents, files, and code stored permanently and searchable.</p>
       </div>
     </div>
   </div>
